Add image to egg-salad.html

--- a/recipes/egg-salad.html
+++ b/recipes/egg-salad.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Egg Salad</h1>
+    <img src="../images/egg-salad-recipe.jpg" alt="Egg Salad" width="400" height="250">
 </body>
 </html>
