--- a/recipes/egg-salad.html
+++ b/recipes/egg-salad.html
@@ -9,5 +9,32 @@
 <body>
     <h1>Egg Salad</h1>
     <img src="../images/egg-salad-recipe.jpg" alt="Egg Salad" width="400" height="250">
+    <h2>This egg salad tastes wonderful in a sandwich and will definitely be devoured! It's really good on rye.</h2>
+    <p>
+        The Best Egg Salad Recipe is an easy favorite! Nothing is more picnic perfect than hard boiled eggs mixed with mayo and a pinch of mustard and of course crunchy with celery and green onions!
+    </p>
+    <p>
+        Whether you make an egg salad sandwich or a healthy egg salad using lettuce or low carb wraps, nothing says ‘all American’ like and egg salad!
+    </p>
+    <h2>
+        Ingredients
+    </h2>
+    <ul>
+        <li>8 eggs</li>
+        <li>½ cup mayonnaise</li>
+        <li>¼ cup chopped green onion</li>
+        <li>1 teaspoon prepared yellow mustard</li>
+        <li>¼ teaspoon paprika</li>
+        <li>salt and pepper to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            Place eggs in a saucepan and cover with cold water. Bring water to a boil and immediately remove from heat. Cover and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool, peel, and chop.
+        </li>
+        <li>
+            Place chopped eggs in a bowl; stir in mayonnaise, green onion, and mustard. Season with paprika, salt, and pepper. Stir and serve on your favorite bread or crackers.
+        </li>
+    </ol>
 </body>
 </html>
