Add ul to recipes list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/egg-salad.html">Egg Salad</a>
-    <a href="recipes/baked-potatoes-soup.html">Baked Potatoes Soup</a>
+    <ul>
+        <li><a href="recipes/egg-salad.html">Egg Salad</a></li>
+        <li><a href="recipes/baked-potatoes-soup.html">Baked Potatoes Soup</a></li>
+    </ul>
 </body>
 </html>
