add zucchini bread recipe to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/egg-salad.html">Egg Salad</a></li>
         <li><a href="recipes/baked-potatoes-soup.html">Baked Potatoes Soup</a></li>
+        <li><a href="recipes/zucchini-bread.html"></a></li>
     </ul>
 </body>
 </html>
