add link to main page

--- a/recipes/egg-salad.html
+++ b/recipes/egg-salad.html
@@ -36,5 +36,8 @@
             Place chopped eggs in a bowl; stir in mayonnaise, green onion, and mustard. Season with paprika, salt, and pepper. Stir and serve on your favorite bread or crackers.
         </li>
     </ol>
+    <br>
+    <br>
+    <a href="../index.html">return to main page</a>
 </body>
 </html>
