--- a/recipes/zucchini-bread.html
+++ b/recipes/zucchini-bread.html
@@ -32,5 +32,8 @@
         <li>Beat eggs, oil, sugar, and vanilla together in a separate large bowl with an electric mixer until combined; add flour mixture and beat well. Stir in zucchini and walnuts until well combined. Pour batter into the prepared pans.</li>
         <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 40 to 60 minutes. Cool in the pans on a wire rack for 20 minutes. Run a table knife around the edges to loosen. Invert carefully onto a wire rack and let cool completely.</li>
     </ol>
+    <br>
+    <br>
+    <a href="../index.html">return to main page</a>
 </body>
 </html>
