--- a/recipes/baked-potatoes-soup.html
+++ b/recipes/baked-potatoes-soup.html
@@ -31,5 +31,8 @@
         <li>Reduce to a simmer, then stir in the remaining ingredients.</li>
         <li>Cook until the cheese is melted.</li>
     </ol>
+    <br>
+    <br>
+    <a href="../index.html">return to main page</a>
 </body>
 </html>
